# chrasis-svn

Engine/libchrasis/trunk/: ChangeLog  Doxyfile.in  Makefile.am  autogen.sh  chrasis.pc.in  configure.ac
Engine/libchrasis/trunk/Chrasis-Win32/: Chrasis-Win32.sln  ReadMe.txt  win32-config.h
Engine/libchrasis/trunk/Chrasis-Win32/learn/: learn.vcproj
Engine/libchrasis/trunk/Chrasis-Win32/libchrasis-win32/: libchrasis-win32.vcproj
Engine/libchrasis/trunk/Chrasis-Win32/recognize/: recognize.vcproj
Engine/libchrasis/trunk/MacOSX/: Makefile  libchrasis-osx-config.pch
Engine/libchrasis/trunk/MacOSX/libchrasis-osx.xcodeproj/: project.pbxproj
Engine/libchrasis/trunk/data/: Makefile.am  database_schema.sql  database_schema_osx.sql
Engine/libchrasis/trunk/data/chmls/: e4b880.chml  e4b881.chml  e4b883.chml  e4b887.chml  e4b888.chml  e4b889.chml  e4b88a.chml  e4b88b.chml  e4b894.chml  e4b895.chml  e4b898.chml  e4b8ad.chml  e4b8b2.chml  e4b8bb.chml  e4b999.chml  e4b99d.chml  e4ba82.chml  e4ba86.chml  e4ba8b.chml  e4ba8c.chml  e4ba94.chml  e4baba.chml  e4bb80.chml  e4bb81.chml  e4bbb0.chml  e4bbbd.chml  e4bd86.chml  e4bd8d.chml  e4bfa0.chml  e4bfa1.chml  e5808b.chml  e58091.chml  e5819a.chml  e582b2.chml  e5838f.chml  e584b2.chml  e58583.chml  e585b6.chml  e587ba.chml  e58880.chml  (+390 more)
Engine/libchrasis/trunk/include/: chrasis.h  config.h.in
Engine/libchrasis/trunk/include/chrasis/: character.h  database.h  global.h  internal.h  platform.h  settings.h
Engine/libchrasis/trunk/src/: Makefile.am  character.cpp  chmlcodec.cpp  chrasisio.cpp  database.cpp  internal.cpp  learn.cpp  learner.cpp  recognize.cpp  recognizer.cpp
Engine/libchrasis/trunk/src/platform_layer/: plat_posix.cpp  plat_win32.cpp
Engine/libchrasis/trunk/src/tools/: Makefile.am  char_size.cpp  chmlcodec.cpp  chmlcodec.h  compact_db.cpp  join_chml.cpp  learn.cpp  probability_test.cpp  recognize.cpp
Linux/CharacterCreater/trunk/: Makefile.am  configure.in
Linux/CharacterCreater/trunk/data/: database_schema.sql  database_scheme.sql
Linux/CharacterCreater/trunk/po/: POTFILES.in  zh_TW.po
Linux/CharacterCreater/trunk/scripts/: create_db.sh  update_db.sh
Linux/CharacterCreater/trunk/src/: Makefile.am  character.cpp  character.h  character.hpp  chml_organizer.cpp  chmlcodec.cpp  chmlcodec.h  common.h  config.h.in  creater.cpp  creater.h  database.cpp  database.h  database.hpp  errorhandler.h  learner.cpp  learner.h  main.cpp  normalizer.cpp  recognize.cpp  recognizer.cpp  recognizer.h  version.h
Linux/ChrasisTrainer/trunk/: AUTHORS  ChangeLog  configure.ac
Linux/ChrasisTrainer/trunk/po/: zh_TW.po
Linux/ChrasisTrainer/trunk/scripts/: remove-autotool.sh
Linux/ChrasisTrainer/trunk/src/: Makefile.am  chmlcodec.cpp  chmlcodec.h  config.h.in  main.cpp  trainer.cpp  trainer.h
Linux/scim-chrasis/trunk/: Makefile.am  autogen.sh  configure.ac
Linux/scim-chrasis/trunk/po/: POTFILES.in  zh_TW.po
Linux/scim-chrasis/trunk/src/: Makefile.am  scim-chrasis.cpp
MacOSX/LeopardChrasis/trunk/: Info.plist  LCCandidateListPopUpButton.h  LCCandidateListPopUpButton.mm  LCDrawingView.h  LCDrawingView.mm  LCInputController.h  LCInputController.mm  LCMainController.h  LCMainController.mm  LCWritingPanel.h  LCWritingPanel.mm  LeopardChrasis.icns  LeopardChrasis_Prefix.pch  main.mm
MacOSX/LeopardChrasis/trunk/English.lproj/: Localizable.strings
MacOSX/LeopardChrasis/trunk/English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
MacOSX/LeopardChrasis/trunk/LeopardChrasis.xcodeproj/: project.pbxproj
MacOSX/LeopardChrasis/trunk/zh_TW.lproj/: Localizable.strings
MacOSX/LeopardChrasis/trunk/zh_TW.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
MacOSX/OVIMChrasis/trunk/: ChrasisCandidateListPopUpButton.h  ChrasisCandidateListPopUpButton.mm  ChrasisDrawingView.h  ChrasisDrawingView.mm  ChrasisWritingPanel.h  ChrasisWritingPanel.mm  Info.plist  OVIMChrasisController.h  OVIMChrasisController.mm  OVIMChrasis_Prefix.pch  main.m
MacOSX/OVIMChrasis/trunk/English.lproj/: InfoPlist.strings  Localizable.strings
MacOSX/OVIMChrasis/trunk/English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
MacOSX/OVIMChrasis/trunk/OVIMChrasis.xcodeproj/: project.pbxproj
MacOSX/OVIMChrasis/trunk/zh_TW.lproj/: Localizable.strings
MacOSX/OVIMChrasis/trunk/zh_TW.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
MacOSX/OVKPStringReceiver/trunk/: FakeOVObjects.h  FakeOVObjects.mm  OVDistributedStringReceiver.h  OVDistributedStringReceiver.mm  OVKPDistributedStringReceiverProtocol.h  OVKPStringReceiver.h  OVKPStringReceiver.mm  OVKPStringReceiverProtocol.h  OVKPStringReceiver_Prefix.pch  OVMDBufferManager.h  OVMDBufferManager.mm  OVMDController.h  OVMDController.mm  OVModuleDebugger.mm  main.mm
MacOSX/OVKPStringReceiver/trunk/MainMenu.nib/: designable.nib  keyedobjects.nib
MacOSX/OVKPStringReceiver/trunk/OVKPStringReceiver.xcodeproj/: project.pbxproj
berlios_de/: index.html
