dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([charactercreater], [0.0.1], [palatis@gmail.com])
AC_CONFIG_SRCDIR([src/charactercreater.h])

AC_SUBST(PACKAGE_VERSION)

AC_DEFINE_UNQUOTED(CHARACTERCREATER_VERSION, "$PACKAGE_VERSION", [The release version of Character Creater.])

# Init automake stuff
AM_INIT_AUTOMAKE([1.9])
AM_CONFIG_HEADER([src/config.h])

# Init gettext
ALL_LINGUAS="zh_TW"
AM_GLIB_GNU_GETTEXT()
AM_GLIB_DEFINE_LOCALEDIR(CHARACTERCREATER_LOCALEDIR)

GETTEXT_PACKAGE=charactercreater
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Gettext package])

# Check for modules
GTKMM_VERSION=2.4
LIBXMLPP_VERSION=2.10
LIBCCGNU2_VERSION=1.4.1

PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= $GTKMM_VERSION)
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

PKG_CHECK_MODULES(LIBXMLPP, libxml++-2.6 >= $LIBXMLPP_VERSION)
AC_SUBST(LIBXMLPP_CFLAGS)
AC_SUBST(LIBXMLPP_LIBS)

#AC_CHECK_HEADER(pthread.h,
#	AC_CHECK_LIB(pthread, pthread_join, [
#		PTHREAD_LIBS="-lpthread"
#		AC_DEFINE([HAVE_LIBPTHREAD], [], [Define if pthread library is there (-lpthread)])
#		AC_DEFINE([HAVE_PTHREAD_H], [], [Define if <pthread.h> is there])
#	])
#)
#AC_SUBST(PTHREAD_LIBS)

# Check for programs
AM_MAINTAINER_MODE

AC_HEADER_STDC
AC_PROG_CXX
AC_PROG_LIBTOOL
IT_PROG_INTLTOOL
AC_LANG([C++])

AC_C_CONST
AC_TYPE_SIZE_T

AC_CONFIG_FILES(
	[Makefile]
	[po/Makefile.in]
	[src/Makefile])
AC_OUTPUT
