dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([chrasistrainer], [0.0.2], [palatis@gmail.com])
AC_CONFIG_SRCDIR([src/chrasistrainer.h])

AC_SUBST(PACKAGE_VERSION)

AC_DEFINE_UNQUOTED(CHRASISTRAINER_VERSION, "$PACKAGE_VERSION", [The release version of Chrasis Trainer.])

# Init automake stuff
AM_INIT_AUTOMAKE([1.9])
AM_CONFIG_HEADER([src/config.h])

# Init gettext
ALL_LINGUAS="zh_TW"
AM_GLIB_GNU_GETTEXT()
AM_GLIB_DEFINE_LOCALEDIR(CHRASISTRAINER_LOCALEDIR)

GETTEXT_PACKAGE=chrasistrainer
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["$GETTEXT_PACKAGE"], [Gettext package])

# Standard Checks
AC_HEADER_STDC
AC_PROG_CXX
AC_PROG_LIBTOOL
IT_PROG_INTLTOOL
AC_LANG([C++])

AC_C_CONST
AC_TYPE_SIZE_T

# Check for modules
GTKMM_VERSION=2.4
LIBXMLPP_VERSION=2.10
CHRASIS_VERSION=0.1.1

PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= $GTKMM_VERSION)
AC_SUBST(GTKMM_CFLAGS)
AC_SUBST(GTKMM_LIBS)

PKG_CHECK_MODULES(LIBXMLPP, libxml++-2.6 >= $LIBXMLPP_VERSION)
AC_SUBST(LIBXMLPP_CFLAGS)
AC_SUBST(LIBXMLPP_LIBS)

PKG_CHECK_MODULES(CHRASIS, chrasis >= $CHRASIS_VERSION)
AC_SUBST(CHRASIS_CFLAGS)
AC_SUBST(CHRASIS_LIBS)

# Check for programs
AM_MAINTAINER_MODE

AC_CONFIG_FILES(
	[Makefile]
	[po/Makefile.in]
	[src/Makefile])
AC_OUTPUT
